resources/public/css/webol.css
body {
  background-color:BurlyWood;
  margin:0;
  padding:0;
  font-family:sans-serif;
  font-size:11pt;
}

h1 {
  text-align:center;
  font-size:2em;
}

h2 {
  text-align:center;
  font-size:1.5em;
}

address {
    font-size:0.6em;
}

table, canvas, .control-group {
    padding-left: 0;
    padding-right: 0;
    margin-left: 10px;
    margin-top: 10px;
    width:90%;
    border: 2px solid Chocolate;
}

canvas#sketchboard {
    width:500px;
    height:300px;
}

table {
    background-color: CornSilk;
}

th, td, input {
    border: 0px dashed black;
    padding: 2px;
    min-width: 40px;
    background-color: DarkGoldenrod;
}

.location, .control-label {
    font-size: 0.9em;
    font-style: italic;
    text-align: left;
    padding: 1px;
    color: DarkRed;
    display: inline;
}

input {
    max-width: 98%;
}

.value {
    font-size: 1em;
    text-align: right;
    color: black;
}

